fixed mapping to list